Adjust formatting, changes some classes to correct some of the alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,8 @@ body {
 }
 
 .project-header {
-    margin: 50px 0px;
+    margin-top: 70px;
+    margin-bottom: 60px;
 }
 
 .img-fluid {
@@ -57,6 +58,10 @@ body {
 }
 
 .resume-header h2 {
+    padding-left: 0px;
+}
+
+h3 {
     padding-left: 0px;
 }
 
